--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
 
             </p>
 
-            <p style="max-width:650px;">1.1. O presente Termo de Uso foi desenvolvido pela Samuel Nasser, inscrita no
-                CNPJ sob o nº 32.147.445/0001-95 (“nos”, “nós” ou “nosso”), e tem por objetivo principal regulamentar as
-                condições de prestação dos serviços do&nbsp;<strong>APP SAQUE FGTS</strong>&nbsp;para os Usuários (o
+            <p style="max-width:650px;">1.1. O presente Termo de Uso foi desenvolvido pela João (“nos”, “nós” ou “nosso”), e tem por objetivo principal regulamentar as
+                condições de prestação dos serviços do&nbsp;<strong>APP IPix</strong>&nbsp;para os Usuários (o
                 “Serviço” ou “os Aplicativos”).</p>
 
             <p style="max-width:650px;">1.2. Através destes Termos descreveremos nossas práticas de privacidade e
@@ -41,7 +40,7 @@
                 nossa plataforma, bem como divulgaremos seus direitos e obrigações relativos à utilização do nosso
                 Serviço.</p>
 
-            <p style="max-width:650px;">1.3. Samuel Nassereddine Junior 22777929858 – ME poderá modificar os presentes
+            <p style="max-width:650px;">1.3. João poderá modificar os presentes
                 Termos de Uso e Política de Privacidade para melhorá-lo, adaptá-lo ou atualizá-lo a alterações
                 legislativas ou jurisprudenciais.</p>
 
@@ -112,7 +111,7 @@
 
                         <td style="padding:0.5em;border:1px solid;word-break:normal">
 
-                            <strong>CONSULTA FGTS</strong>
+                            <strong>IPIX</strong>
 
                         </td>
 
@@ -291,7 +290,7 @@
 
                         </td>
 
-                        <td style="padding:0.5em;border:1px solid;word-break:normal">Samuel Nasser utiliza serviços de
+                        <td style="padding:0.5em;border:1px solid;word-break:normal">João utiliza serviços de
                             remarketing para anunciar em sites de terceiros para você depois que você visitou nosso
                             Serviço. Nós e nossos fornecedores terceirizados usamos cookies para informar, otimizar e
                             veicular anúncios com base em suas visitas anteriores ao nosso Serviço.<strong>Google
@@ -410,7 +409,7 @@
                 revogação do mesmo.</p>
 
             <p style="max-width:650px;">10.1.1 Você também poderá entrar em contato com nosso encarregado de dados
-                através do canal abaixo:<br>Samuel Junior<br>EMAIL: <a href="mailto:signalsoft2567@gmail.com"
+                através do canal abaixo:<br>João<br>EMAIL: <a href="mailto:signalsoft2567@gmail.com"
                     target="_blank">signalsoft2567@gmail.com</a>
 
                 <br>Endereço: Rua Professora Adélia Alves Martins, 12 – Casa 2 – São Bernardo do Campo, São Paulo – SP,
