--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             </p>
 
             <p style="max-width:650px;">10.1. A Lei Geral de Proteção de Dados Pessoais (Lei nº 13.709/2018) garante a
-                você determinados direitos e garantias em relação aos seus dados pessoais. A Samuel Nasser, cumprindo
+                você determinados direitos e garantias em relação aos seus dados pessoais., cumprindo
                 com a sua obrigação de clareza e transparência, além de detalhar nesta política como utiliza e protege
                 seus dados pessoais, disponibiliza,&nbsp;<strong>através do e-mail <a href="mailto:signalsoft2567@gmail.com"
                         target="_blank">signalsoft2567@gmail.com</a>
@@ -412,8 +412,7 @@
                 através do canal abaixo:<br>João<br>EMAIL: <a href="mailto:signalsoft2567@gmail.com"
                     target="_blank">signalsoft2567@gmail.com</a>
 
-                <br>Endereço: Rua Professora Adélia Alves Martins, 12 – Casa 2 – São Bernardo do Campo, São Paulo – SP,
-                09791-405.
+                <br>Endereço:...
             </p>
 
             <p style="max-width:650px;">
